--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,9 @@ install:
   - unzip protoc-3.1.0-linux-x86_64.zip
   
 script:
+  - mkdir -p ./src/main/java
   - PROTO_FILE=robot_comm_packet.proto
-  - bin/protoc -I=. --java_out=. ./${PROTO_FILE}
+  - bin/protoc -I=. --java_out=./src/main/java ./${PROTO_FILE}
   - bin/protoc -I=. --cpp_out=. ./${PROTO_FILE}
   - find . -type f
 
