--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,6 @@
+language: java
+jdk: openjdk7
+
 install:
   # get protoc
   - wget https://github.com/google/protobuf/releases/download/v3.1.0/protoc-3.1.0-linux-x86_64.zip
