--- a/build.gradle
+++ b/build.gradle
@@ -24,3 +24,5 @@ dependencies {
     // https://mvnrepository.com/artifact/com.google.protobuf/protobuf-java
     compile group: 'com.google.protobuf', name: 'protobuf-java', version: '3.0.2'
 }
+
+shadowJar.archiveName = "$project.name-$project.version-all.jar"
