--- a/build.gradle
+++ b/build.gradle
@@ -65,6 +65,11 @@ dependencies {
 
     // https://mvnrepository.com/artifact/com.google.protobuf/protobuf-java
     compile group: 'com.google.protobuf', name: 'protobuf-java', version: '3.2.0'
+
+    // list -> string
+    // https://mvnrepository.com/artifact/com.google.guava/guava
+    compile group: 'com.google.guava', name: 'guava', version: '20.0'
+
 }
 
 shadowJar.archiveName = "$project.name-$project.version-all.jar"
